Cleaned up a little of the functionality

--- a/bb/bbtest/index.html
+++ b/bb/bbtest/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="/bb/zglobal/js/jquery.min.js"></script>
   <script type="text/javascript" src="/bb/zglobal/js/raphael.js"></script>
   <script type="text/javascript" src="/bb/zglobal/js/jquery.mousewheel.js"></script>
-  <script type="text/javascript" src="/bb/zglobal/js/mapsvg.min.js"></script>
+  <script type="text/javascript" src="/bb/zglobal/js/mapsvg.js"></script>
 </head>
 <!--
  \      woow
