Fixing a few things

--- a/bb/bbtest/index.html
+++ b/bb/bbtest/index.html
@@ -19,7 +19,7 @@ Diagrams & Design (c) AC Sound
 -->
 <body>
 <div id="build" class="bb"></div>
-<div id="search">
+<div id="searchpanel">
     <div id="textfilter">
         <span class="pre">Search:</span>
     	<span class="input"><input id="search" accesskey="/" type="text" /></span>
