Cleaning up a little

--- a/bb/bbtest/index.html
+++ b/bb/bbtest/index.html
@@ -46,7 +46,7 @@ Diagrams & Design (c) AC Sound
   ga('create', 'UA-24492605-4', 'acsoundstudio.com');
   ga('send', 'pageview');
 </script>
-    <script type="text/javascript" src="/bb/zglobal/js/svg-pan-zoom.js"></script>
+    <script src="/bb/zglobal/js/svg-pan-zoom.js"></script>
     <script src="/bb/zglobal/js/bbutler.js"></script>
 </body>
 </html>
