Simplify client initialization code

--- a/bb/clxrev3-vca/index.html
+++ b/bb/clxrev3-vca/index.html
@@ -47,7 +47,7 @@ Diagrams & Design (c) AC Sound
 <script src="../zglobal/js/misc.js"></script>
 <script src="../zglobal/js/svg-pan-zoom.js"></script>
 <script src="../zglobal/js/bbutler.js"></script>
-<script>document.addEventListener('DOMContentLoaded', buildButler.Main.init)</script>
+<script>document.addEventListener('DOMContentLoaded', buildButler.init)</script>
 
 </body>
 </html>
