--- a/bb/clxrev3-vca/index.html
+++ b/bb/clxrev3-vca/index.html
@@ -45,7 +45,7 @@ Diagrams & Design (c) AC Sound
 	<button id="invert">Invert</button>
 </span>
 <script src="../zglobal/js/misc.js"></script>
-<script src="../zglobal/js/svg-pan-zoom.js"></script>
+<script src="../zglobal/js/svg-pan-zoom.min.js"></script>
 <script src="../zglobal/js/bbutler.js"></script>
 <script>document.addEventListener('DOMContentLoaded', buildButler.init)</script>
 
