Add reset button
(If you don't like, feel free to remove)

--- a/bb/clxrev3-that/index.html
+++ b/bb/clxrev3-that/index.html
@@ -38,8 +38,9 @@ Diagrams & Design (c) AC Sound
 </div>
 <div id="partlist" class="panel"></div>
 <span class="controls">
-	<button id="invert">Invert</button>
-	<button id="about" onclick='window.open("about.html", "_blank");'>About/Help</button>
+    <button id="invert">Invert</button>
+    <button id="reset">Reset</button>
+    <button id="about" onclick='window.open("about.html", "_blank");'>About/Help</button>
 </span>
 <script src="../zglobal/js/misc.js"></script>
 <script src="../zglobal/js/svg-pan-zoom.min.js"></script>
