Use the more specific word 'component' rather than 'part'

--- a/bb/clxrev3-vca/index.html
+++ b/bb/clxrev3-vca/index.html
@@ -24,19 +24,19 @@
 Diagrams & Design (c) AC Sound
 -->
 <div id="build" class="bb"></div>
-<div class="partpanel" style="width:320px">
+<div class="componentpanel" style="width:320px">
 	<div id="label">
 		CLX-VU Rev3 VCA	>>
-		<span id="selectedpart">Build it!</span>
+		<span id="selectedcomponent">Build it!</span>
 	</div>
     <span id="textfilter">
-        <span id="hidelist" title="Hide/Show Part List"></span>
+        <span id="hidelist" title="Hide/Show Component List"></span>
         <span class="pre">Find:</span>
     	<span class="input">
 			<input id="filter" accesskey="/" type="text" />
 		</span>
     </span>
-	<div id="partlist"></div>
+	<div id="componentlist"></div>
 </div>
 <span class="controls">
 	<!--<button id="zoom-in">+</button>
