--- a/bb/jslitmus/1/index.html
+++ b/bb/jslitmus/1/index.html
@@ -25,19 +25,19 @@
 Diagrams & Design (c) AC Sound
 -->
 <div id="build" class="bb"></div>
-<div id="partpanel" class="panel">
+<div id="componentpanel" class="panel">
 	<div id="label">CLX-VU Rev3 THAT >>
-		<span id="selectedpart">Build it!</span>
+		<span id="selectedcomponent">Build it!</span>
 	</div>
     <div id="textfilter">
-        <span id="hidelist" title="Hide/Show Part List"></span>
+        <span id="hidelist" title="Hide/Show Component List"></span>
         <span class="pre">Find:</span>
     	<span class="input">
 			<input id="filter" accesskey="/" type="text" />
 		</span>
     </div>
 </div>
-<div id="partlist" class="panel"></div>
+<div id="componentlist" class="panel"></div>
 <span class="controls">
 	<button id="invert">Invert</button>
 	<button id="about" onclick='window.open("about.html", "_blank");'>About/Help</button>
