Use a input label

--- a/bb/clxrev3-vca/index.html
+++ b/bb/clxrev3-vca/index.html
@@ -40,7 +40,8 @@ Diagrams & Design (c) AC Sound
     </span>
 </div>
 <div id="componentlistpanel" class="panel">
-    <div id="find">Find:
+    <div id="find">
+        <label for="filter">Find:</label>
         <span class="input">
             <input id="filter" accesskey="/" type="text" />
         </span>
