--- a/bb/clxrev3-vca/index.html
+++ b/bb/clxrev3-vca/index.html
@@ -51,6 +51,6 @@ Diagrams & Design (c) AC Sound
 <script src="../zglobal/js/misc.js"></script>
 <script src="../zglobal/js/svg-pan-zoom.min.js"></script>
 <script src="../zglobal/js/bbutler.js"></script>
-<script>document.addEventListener('DOMContentLoaded', buildButler.init)</script>
+<script>document.addEventListener('DOMContentLoaded', function() { buildButler.init(); });</script>
 </body>
 </html>
