Added google web fonts and .collapsed class

--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -10,6 +10,8 @@
     <title>DEV BuildButler</title>
     <link href="../bb/favicon.ico" rel="shortcut icon">
     <link href="../bb/robo.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div id="loading">
@@ -24,7 +26,7 @@ Much dev
 <div id="labelpanel">
     <div id="top">
         <span id="togglelist" title="Hide/Show Component List"></span>
-        <span id="label">DE-VU Rev3 VCDEV    >>
+        <span id="label">DE-VU Rev3 VCDEV //
             <span id="selectedcomponent">Develop it!</span>
         </span>
     </div>
