css tweak, copy changes to prod...

--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -19,16 +19,11 @@
     <div id="loading-text">погрузочный</div>
     <div class="tinytext"><a href="http://whatbrowser.org/">If this page isn't loading you need more dev</a> (or enable Dev).</div>
 </div>
-<!--
-Much dev
--->
 <div id="build" class="bb"></div>
 <div id="labelpanel">
     <div id="top">
         <span id="togglelist" title="Hide/Show Component List"></span>
-        <span id="label">DE-VU Rev3 VCDEV //
-            <span id="selectedcomponent">Develop it!</span>
-        </span>
+        <span id="label">DE-VU Rev3 VCDEV&nbsp;//&nbsp;<span id="selectedcomponent">Develop it!</span></span>
     </div>
     <div id="controls">
         <span id="nomobile">
@@ -36,6 +31,9 @@ Much dev
         </span>
         <button id="invert">Invert</button>
         <button id="reset">Reset</button>
+        <form method="GET" action="http://buildbutler.org/page/shortcuts">
+            <input type="submit" value="Shortcuts">
+        </form>
         <form method="GET" action="http://buildbutler.org/info/clxvu">
             <input type="submit" value="Info">
         </form>
