--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -52,9 +52,9 @@
 </div>
 <div id="componentlistpanel">
     <div id="find">
-    <label for="filter">Find:</label>
+    <label for="filter">Find:&nbsp;</label>
         <span class="input">
-            <input id="filter" accesskey="/" type="text" />
+            <input id="filter" accesskey="/" type="search" />
         </span>
     </div>
     <div id="componentlist"></div>
