i thought i commit'd this change... guess not

--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -54,7 +54,7 @@
     <div id="find">
     <label for="filter">Find:&nbsp;</label>
         <span class="input">
-            <input id="filter" accesskey="/" type="search" />
+            <input id="filter" accesskey="/" type="text" />
         </span>
     </div>
     <div id="componentlist"></div>
