better colors for color picker

--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -27,16 +27,18 @@
     </div>
     <div id="controls">
         <button id="showallbtn">All</button>
-        <input id="monotonecolor" type="color" value="#339933" list="monotones" />
+        <input id="monotonecolor" type="color" value="#20A558" list="monotones" />
           <datalist id=monotones>
-            <option>#339933</option>
-            <option>#993399</option>
-            <option>#339999</option>
-            <option>#999933</option>
-            <option>#996633</option>
-            <option>#336699</option>
-            <option>#ffffff</option>
-            <option>#000000</option>
+            <option>#20A558</option>
+            <option>#3A6ADF</option>
+            <option>#FC9514</option>
+            <option>#D86D91</option>
+            <option>#898D0A</option>
+            <option>#9E4894</option>
+            <option>#D7200C</option>
+            <option>#534E45</option>
+            <option>#7C7263</option>
+            <option>#CFC2A8</option>
           </datalist>
         <button id="invert">Invert</button>
         <button id="reset">Reset</button>
