a few cool tweaks

--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -26,8 +26,8 @@
         <span id="label">DE-VU Rev3 VCDEV&nbsp;//&nbsp;<span id="selectedcomponent">Develop it!</span></span>
     </div>
     <div id="controls">
-        <button id="showallbtn">All</button>
-        <input id="monotonecolor" type="color" value="#20A558" list="monotones" />
+        <label for="monotonecolor">M</label>
+        <input id="monotonecolor" type="color" value="#e1e1e1" list="monotones" />
           <datalist id=monotones>
             <option>#20A558</option>
             <option>#3A6ADF</option>
@@ -40,6 +40,7 @@
             <option>#7C7263</option>
             <option>#CFC2A8</option>
           </datalist>
+        <button id="showallbtn">All</button>
         <button id="invert">Invert</button>
         <button id="reset">Reset</button>
         <span id="nomobile">
