--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -55,7 +55,7 @@
 </div>
 <div id="componentlistpanel">
     <div id="find">
-    <label for="filter">Find:&nbsp;</label>
+    <label for="filter">Find:</label>
         <span class="input">
             <input id="filter" accesskey="/" type="text" />
         </span>
