ARROW WITH LOOP! kind of fun.

--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -22,7 +22,7 @@
 <div id="build" class="bb"></div>
 <div id="labelpanel">
     <div id="top">
-        <span id="togglelist" title="Hide/Show Component List"></span>
+        <span id="togglelist" title="Hide/Show Component List">&#8619;</span>
         <span id="label">DE-VU Rev3 VCDEV&nbsp;//&nbsp;<span id="selectedcomponent">Develop it!</span></span>
     </div>
     <div id="controls">
