i think i got it working

--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -26,7 +26,21 @@
         <span id="label">DE-VU Rev3 VCDEV&nbsp;//&nbsp;<span id="selectedcomponent">Develop it!</span></span>
     </div>
     <div id="controls">
-        <label for="monotonecolor">M</label>
+        <label for="strokecolor">S</label>
+        <input id="strokecolor" type="color" value="#e1e1e1" list="strokes" />
+          <datalist id=strokes>
+            <option>#20A558</option>
+            <option>#3A6ADF</option>
+            <option>#FC9514</option>
+            <option>#D86D91</option>
+            <option>#898D0A</option>
+            <option>#9E4894</option>
+            <option>#D7200C</option>
+            <option>#534E45</option>
+            <option>#7C7263</option>
+            <option>#CFC2A8</option>
+          </datalist>
+        <label for="monotonecolor">F</label>
         <input id="monotonecolor" type="color" value="#e1e1e1" list="monotones" />
           <datalist id=monotones>
             <option>#20A558</option>
