added better stroke colors, removed some stuff

--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -29,27 +29,27 @@
         <label for="strokecolor">S</label>
         <input id="strokecolor" type="color" value="#e1e1e1" list="strokes" />
           <datalist id=strokes>
-            <option>#20A558</option>
-            <option>#3A6ADF</option>
-            <option>#FC9514</option>
-            <option>#D86D91</option>
-            <option>#898D0A</option>
-            <option>#9E4894</option>
-            <option>#D7200C</option>
+            <option>#E03002</option>
+            <option>#D9146F</option>
+            <option>#7A45B7</option>
+            <option>#16A9CE</option>
+            <option>#24BE74</option>
+            <option>#76A5CC</option>
+            <option>#F5E525</option>
+            <option>#985F0A</option>
             <option>#534E45</option>
-            <option>#7C7263</option>
             <option>#CFC2A8</option>
           </datalist>
         <label for="monotonecolor">F</label>
         <input id="monotonecolor" type="color" value="#e1e1e1" list="monotones" />
           <datalist id=monotones>
-            <option>#20A558</option>
+            <option>#D7200C</option>
+            <option>#D86D91</option>
+            <option>#9E4894</option>
             <option>#3A6ADF</option>
             <option>#FC9514</option>
-            <option>#D86D91</option>
             <option>#898D0A</option>
-            <option>#9E4894</option>
-            <option>#D7200C</option>
+            <option>#20A558</option>
             <option>#534E45</option>
             <option>#7C7263</option>
             <option>#CFC2A8</option>
