--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta content="initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui" name="viewport">
+    <meta content="initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui" name="viewport" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta content="BuildButler helps you develop the dev." name="description">
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta content="BuildButler helps you develop the dev." name="description" />
     <title>DEV BuildButler</title>
     <link href="../bb/favicon.ico" rel="shortcut icon">
     <link href="../bb/robo.css" rel="stylesheet" type="text/css">
@@ -23,7 +23,7 @@
 <div id="labelpanel">
     <div id="top">
         <span id="togglelist" title="Hide/Show Component List">&#8619;</span>
-        <span id="label">DE-VU Rev3 VCDEV&nbsp;//&nbsp;<span id="selectedcomponent">Develop it!</span></span>
+        <span id="label"><span id="designID">DE-VU Rev3 VCDEV</span>&nbsp;/:/&nbsp;<span id="selectedcomponent">Develop it!</span></span>
     </div>
     <div id="controls">
         <label for="strokecolor">S</label>
@@ -71,7 +71,7 @@
     <div id="find">
     <label for="filter">Find:</label>
         <span class="input">
-            <input id="filter" accesskey="/" type="text" />
+            <input id="filter" accesskey="/" type="search" />
         </span>
     </div>
     <div id="componentlist"></div>
