teeny tiny changes

--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div id="loading">
-    <img id="loading-image" src="../bb/loading.gif" height="68" width="68" />
+    <img id="loading-image" src="/bb/loading.gif" height="68" width="68" />
     <div id="loading-text">loading dev</div>
     <div class="tinytext"><a href="http://whatbrowser.org/">If this page isn't loading you need more dev</a> (or enable Dev).</div>
 </div>
@@ -23,7 +23,7 @@
 <div id="labelpanel">
     <div id="top">
         <span id="togglelist" title="Hide/Show Component List">&#8619;</span>
-        <span id="label"><span id="designID">DE-VU Rev3 VCDEV</span>&nbsp;/:/&nbsp;<span id="selectedcomponent">Develop it!</span></span>
+        <span id="label"><span id="designID">DE-VU Rev3 VCDEV</span>&nbsp;&#12540;&nbsp;<span id="selectedcomponent">Develop it!</span></span>
     </div>
     <div id="controls">
         <label for="strokecolor">S</label>
