Moved things around...

--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta content="initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui" name="viewport" />
+    <meta charset="utf-8" />
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta content="BuildButler helps you develop the dev." name="description" />
     <title>DEV BuildButler</title>
-    <link href="../bb/favicon.ico" rel="shortcut icon">
-    <link href="../bb/robo.css" rel="stylesheet" type="text/css">
+    <link href="/bb/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="../bb/robo.css" rel="stylesheet" type="text/css" />
     <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css' />
 </head>
 <body>
 <div id="loading">
@@ -59,11 +59,11 @@
         <button id="reset">Reset</button>
         <span id="nomobile">
           <form method="GET" action="http://buildbutler.org/page/shortcuts">
-              <input type="submit" value="Shortcuts">
+              <input type="submit" value="Shortcuts" />
           </form>
         </span>
         <form method="GET" action="http://buildbutler.org/info/clxvu">
-            <input type="submit" value="Info">
+            <input type="submit" value="Info" />
         </form>
     </div>
 </div>
@@ -76,9 +76,9 @@
     </div>
     <div id="componentlist"></div>
 </div>
-<script src="../bb/js/misc.js"></script>
-<script src="../bb/js/svg-pan-zoom.js"></script>
-<script src="../bb/js/BuildButler.js"></script>
+<script src="../bb/misc.js"></script>
+<script src="../bb/svg-pan-zoom.js"></script>
+<script src="../bb/BuildButler.js"></script>
 <script>document.addEventListener('DOMContentLoaded', function() { buildButler.init(); });</script>
 </body>
 </html>
