EVERYWHERE I LOOK I CAN SEE UNICODE

--- a/clxrev3-vca/index.html
+++ b/clxrev3-vca/index.html
@@ -22,7 +22,7 @@
 <div id="build" class="bb"></div>
 <div id="labelpanel">
     <div id="top">
-        <span id="togglelist" title="Hide/Show Component List">&#8619;</span>
+        <span id="togglelist" title="Hide/Show Component List">&#x2261;</span>
         <span id="label"><span id="designID">DE-VU Rev3 VCDEV</span>&nbsp;&#12540;&nbsp;<span id="selectedcomponent">Develop it!</span></span>
     </div>
     <div id="controls">
@@ -57,14 +57,14 @@
         <button id="showallbtn">All</button>
         <button id="invert">Invert</button>
         <button id="reset">Reset</button>
-        <span id="nomobile">
-          <form method="GET" action="http://buildbutler.org/page/shortcuts">
-              <input type="submit" value="Shortcuts" />
-          </form>
-        </span>
         <form method="GET" action="http://buildbutler.org/info/clxvu">
             <input type="submit" value="Info" />
         </form>
+        <span id="nomobile">
+          <form method="GET" action="http://buildbutler.org/page/shortcuts">
+              <input type="submit" value="&#9000;" />
+          </form>
+        </span>
     </div>
 </div>
 <div id="componentlistpanel">
